2007-04-28 (later) Stuart Brorson   <sdb@cloud9.net>
	* include/globals.h, scheme/gnet-spice-sdb.scm,
	src/globals.c, src/parsecmd.c  configure.ac: Add 
	--nomunge flag to gnetlist, telling spice-sdb 
	to not autocorrect incorrect device prefixes 
	(handles complaint from John Doty).  Also 
	upgraded handling of long opts.  Finally, updated 
	spice-sdb test suite to check these new features.
	
2007-04-28 Stuart Brorson   <sdb@cloud9.net>
	* src/g_netlist.c, scheme/gnet-spice-sdb.scm:  Fix spice-sdb's
	treatment of slotted parts so it emits pins in pinseq order.
	This required making mods to g_netlist.c, as well as several
	fcns in libgeda.  Then updated spice-sdb test suite.  This
	closes bug 1680275.
	
2007-04-21 Ales Hvezda   <ahvezda@geda.seul.org>

	* src/gnetlist.c: Move the "-l" command line scheme loading code to
	be *before* schematics are loaded (instead of after).

	* examples/stack_1.sch, examples/Makefile.am: Added stack example 
	schematic.

	* tests/Makefile.am, tests/runtest.sh, tests/singlenet.protel,
	tests/singlenet.protelII, tests/stack.geda, tests/stack_1.geda,
	tests/drc2/Makefile.am, tests/hierarchy/Makefile.am,
	tests/hierarchy/gnetlistrc, tests/hierarchy/gnetlistrc.hierarchy:
	Fixed the gnetlist regressions tests to work with make distcheck.

	* tests/spice-sdb/run_tests.sh: Added -I "gnetlist -g" to the 
	golden file diff to ignore the embedded command line information
	in the spice-sdb golden files.

	* scheme/gnet-calay.scm: Added backed written by John Doty for
	the Calay netlist. Thanks!

	* tests/runtest.sh: Minor improvements in test running script.

2007-04-21 Stuart Brorson   <sdb@cloud9.net>
	* tests/spice-sdb/*  Added new spice-sdb test directory.  Then
	created test environment similar to Dan's regression tests for
	refdes_renum.
	
2007-02-20 Carlos Nieves Onega <cnieves@iespana.es>

	* scheme/gnet-allegro.scm: Fix bug #1663729.
	  When writing the device files, check if 'devfiles' directory 
	  exists and create it if needed.
