@@ -1,7 +1,7 @@
 * gnetlist -o new_multiequal.spice-sdb -g spice-sdb ./multiequal.sch
 *********************************************************
 * Spice file generated by gnetlist                      *
-* spice-sdb version 2.10.2007 by SDB --                 *
+* spice-sdb version 4.28.2007 by SDB --                 *
 * provides advanced spice netlisting capability.        *
 * Documentation at http://www.brorson.com/gEDA/SPICE/   *
 *********************************************************
