@@ -1,3 +1,4 @@
 EXTRA_DIST= \
      LVD.sym \
-     transistor.sym
+     transistor.sym \
+     LM324_slotted-1.sym 
